2008-02-16  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_option_menu_set), (wp_load_stuffs):
	* gnome-wp-item.c: (gnome_wp_item_update), (gnome_wp_item_new):
	* gnome-wp-item.h: always apply the current GConf settings to the
	initially selected wallpaper so that we don't modify the settings if
	GConf state and the definition in backgrounds.xml are not identical
	(bug #516746)

	* gnome-wp-xml.c: (gnome_wp_xml_load_xml): get rid of redundant if

2008-02-15  Kjartan Maraas  <kmaraas@gnome.org>

	* appearance-desktop.c: (wp_scale_type_changed),
	(wp_shade_type_changed): Make it build.

2008-02-14  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_scale_type_changed): don't try to set shading
	and options in GConf when we're dealing with a read-only source (bug
	#516328)

2008-02-11  Matthias Clasen <mclasen@redhat.com>

	Fixes bug #511306

	* capplets/appearance/data/appearance.glade:
	* capplets/appearance/appearance-font.c: remove useless (with
	GIO-based Nautilus) 'Go to fonts folder' button.

2008-02-09  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_installer_run): make sure we're done
	with the dialog before we destroy it (bug #515414)

2008-02-05  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: add a comment for translators (bug #514598)

2008-01-25  Soren Sandmann  <sandmann@redhat.com>

	* gnome-wp-item.c (collect_save_options): Delete this function.

	* gnome-wp-xml.c: Don't include gnome-wp-utils.h
	* appearance-desktop.c: Don't include gnome-wp-utils.h
	* gnome-wp-item.c: Don't include gnome-wp-utils.h
	* gnome-wp-item.h: Move gconf key macros here from gnome-wp-utils.h

	* Makefile.am: Delete gnome-wp-utils.[ch]
	
	* gnome-wp-utils.[ch]: Delete these files.
	
2008-01-25  Soren Sandmann  <sandmann@redhat.com>

	* gnome-wp-item.h (GNOME_DESKTOP_USE_UNSTABLE_API): 
	* appearance-desktop.c (GNOME_DESKTOP_USE_UNSTABLE_API): 
	* gnome-wp-item.c (GNOME_DESKTOP_USE_UNSTABLE_API): 
